--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,2 +1,9 @@
 sphinx==7.1.2
 sphinx-rtd-theme==1.3.0rc1
+readthedocs-sphinx-ext
+nbsphinx==0.8.6
+ipython
+Pygments==2.15.0
+sphinxcontrib-bibtex>=2.1
+sphinxcontrib-svg2pdfconverter
+sphinx-gallery
